# StarknetStakeMate

./: .dockerignore  .env.example  .env_exampl  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  migrate_queue.py  pyproject.toml  requirements.txt
api/: __init__.py  app.py  auth.py
api/routers/: delegators.py  locales.py  status.py  users.py  validators.py
data/: all_paths.py  contracts.py  languages.py  models.py  tg_bot.py
db_api/: database.py  models.py  sqlalchemy_.py  user_service.py
locales/: de.json  en.json  es.json  ko.json  pl.json  ru.json  ua.json  zh.json
migrations/: __init__.py
parse/: msg_format.py  parse_info.py
scripts/: dedupe_users.py
services/: __init__.py  attestation_service.py  formatting.py  i18n_plural.py  price_service.py  rpc_client.py  staking_dto.py  staking_service.py  token_service.py  tracking_service.py  yield_service.py
smart_contracts_abi/: l2_attestation_contract.json  l2_pool_contract.json  l2_pool_contract_min.json  l2_staking_contract.json
tasks/: attestation_alerts.py  request_queue.py  strk_notification.py  tracking.py
tests/: conftest.py  test_attestation_alerts.py  test_attestation_grid.py  test_auth.py  test_dto.py  test_formatting.py  test_i18n_plural.py  test_locales.py  test_message_split.py  test_reorder_dnd.py  test_threshold_parser.py  test_tracking_add.py  test_tracking_rename.py  test_tracking_reorder.py  test_yield_endpoint.py  test_yield_service.py
utils/: cache.py  check_valid_addresses.py  create_files.py  exceptions.py  filters.py  format_decimal.py  logger.py  msg.py  msg_format.py  queue_manager.py  rate_limiter.py  read_json.py
webapp/: app.js  index.html  style.css
(+24 files in other folders)
